$Id$

v0.39.6		11-Jan-2004

	mbcico:
		New binkp/1.1 driver fixes for Sun NetBSD.
		Removed TCP ignore check in EOB state.

	mbsetup:
		Reorganised menu 1.4 screen 1 and 2.
		Added settings for T-Mail filebox paths in the second screen
		of menu 1.4.


v0.39.5		24-Dec-2003 - 11-Jan-2004

	general:
		Upgraded to new released ftscprod.008
		Added setup option per node to disable the binkp/1.1 protocol.
		Added new binkp/1.1 driver, the code is disabled by default
		and can only be used with the right configure option.
		If you want to try the new binkp code, then run ./configure
		with the --enable-newbinkp option. And if you are brave and
		do this, please give some feedback about failed sessions with
		certain mailers. Watch out: debug.log grows very very fast!

	upgrade:
		Check setting 7.x.3.18 for each node. If you know the node uses
		Irex 2.29 or older then set this to Yes or you won't have good
		sessions with these mailers. (For the default compile it doesn't
		do anything yet, but it will as soon as the new binkp/1.1
		driver is ready).

	common.a:
		Allows node locking with zero bytes lockfiles created by some
		other OS when enabled in the setup.
		The attach function now checks if a file is already attached.

	mbcico:
		Binkp code cleanup.
		Allow m_file command in binkp during file transfer in progress.
		Fixed a segfault when a session failed.
		New binkp/1.1 driver, not compiled by default yet.

	mbout:
		Poll, remove poll and request failed to points which had no
		point directory in the outbound, now the directory is created.

	mbfido:
		With scannews after a GROUP command when authorisation was
		asked we did not perform a login.

	mbsetup:
		Added setting in menu 1.14 to allow zero bytes lockfiles
		created by another OS.
		Added setting in menu 7.x.3.18 to disable the use of binkp/1.1
		protocol per node.
		Corrected a spelling error (thanks Vince).
		Removed global setup screen for the ftp server.

	mbtask: